--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: url("assets/background.png") no-repeat center center fixed;
+      background-size: cover;
+    }
+  </style>
   <body></body>
 </html>
