added contacts section.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Portfolio — Hero</title>
+    <title>D. Garcia - Portfolio Site</title>
 
     <!-- Optional: fonts -->
     <link
@@ -158,6 +158,29 @@
 
     <!-- RIGHT BUTTON -->
     <button class="proj-btn right-btn">&#10095;</button>
+
+  </div>
+</section>
+
+<section id="contact" class="contact-section">
+  <h1 class="section-title">Connect With Me</h1>
+
+  <div class="contact-icons">
+
+    <a href="mailto:darius.forworkgarcia@gmail.com" class="icon-card">
+      <i class="fa-solid fa-envelope"></i>
+      <span>Email</span>
+    </a>
+
+    <a href="https://www.linkedin.com/in/darius-john-garcia-8766b8369" target="_blank" rel="noopener noreferrer" class="icon-card">
+     <i class="fa-brands fa-linkedin"></i>
+      <span>LinkedIn</span>
+    </a>
+
+    <a href="https://github.com/Hertis-Garcia" target="_blank"  rel="noopener noreferrer "class="icon-card">
+      <i class="fa-brands fa-github"></i>
+      <span>GitHub</span>
+    </a>
 
   </div>
 </section>
