--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
         <nav class="navlinks" role="navigation" aria-label="Main navigation">
           <a href="assets/Garcia_Resume.pdf" target="_blank">Resume / CV</a>
+          <a href="#about">About Me</a>
           <a href="#skills">Skills</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
