--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <img src="https://cdn.simpleicons.org/python" data-name="Python" alt="Python">
           <img src="https://cdn.simpleicons.org/dart" data-name="Dart" alt="Dart">
           <img src="https://cdn.simpleicons.org/typescript" data-name="TypeScript" alt="TypeScript">
-          <img src="https://cdn.simpleicons.org/c++" data-name="SQL / MySQL" alt="SQL">
+          <img src="https://cdn.simpleicons.org/c#" data-name="C#" alt="SQL">
 
         </div>
 
@@ -143,7 +143,7 @@
           <img src="https://cdn.simpleicons.org/firebase" data-name="Firebase">
           <img src="https://cdn.simpleicons.org/bootstrap" data-name="Bootstrap">
           <img src="https://cdn.simpleicons.org/mysql" data-name="MySQL" alt="MySQL">
-          <img src="https://cdn.simpleicons.org/mongodb" data-name="C++" alt="C++">
+          <img src="https://cdn.simpleicons.org/mongodb" data-name="MongoDb" alt="MongoDb">
         </div>
         <div class="skill-label"></div>
       </div>
@@ -158,7 +158,7 @@
             <div class="tools-item"><img src="https://cdn.simpleicons.org/github" data-name="Github"></div>
             <div class="tools-item"><img src="https://api.iconify.design/logos-android-icon.svg" data-name="Android Studio"></div>
 
-            <!-- duplicate for seamless loop -->
+
             <div class="tools-item"><img src="https://cdn.simpleicons.org/figma" data-name="Figma"></div>
             <div class="tools-item"><img src="https://cdn.simpleicons.org/git" data-name="Git"></div>
             <div class="tools-item"><img src="https://cdn.simpleicons.org/github" data-name="Github"></div>
@@ -181,22 +181,44 @@
       <div class="projects-viewport">
         <div class="projects-track">
 
-          <article class="project-card">
+          <article class="project-card project-senator">
+
             <div class="project-image">
-              <img src="assets/milo_logo.png" alt="MILO">
+              <img src="assets/senator_logo.png" alt="Senator Catalog Website Preview" />
 
               <div class="project-overlay">
                 <div class="overlay-content">
-
-
-                  <a href="https://play.google.com/store/apps/details?id=com.gforce.milo_app" target="_blank" class="overlay-btn">
-                    View on Play Store
-                  </a>
+                  <a href="assets/garcia_documentation_senator.pdf" target="_blank" rel="noopener noreferrer" class="overlay-btn">View System</a>
                 </div>
               </div>
             </div>
-            <h3>Project Title 1</h3>
-            <p>Short description...</p>
+
+            <div class="project-body">
+              <small class="project-hint">Hover to view system details</small>
+
+              <h3>Senator Catalog</h3>
+              <h3>Candidate Information & Rating System</h3>
+
+              <div class="project-tech">
+                <span>ASP.NET</span>
+                <span>C#</span>
+                <span>SQL Server</span>
+              </div>
+
+              <p class="project-desc">
+                A web-based information and rating management system designed to help voters
+                access organized, accurate, and up-to-date data on senatorial candidates
+                through public dashboards and secure administrative tools.
+              </p>
+
+              <ul class="project-features">
+                <li>Public dashboards for candidate profiles and ratings</li>
+                <li>Role-based access for guest, registered users, and administrators</li>
+                <li>Admin panel with full CRUD operations for candidate data</li>
+                <li>Secure authentication with login, registration, and email verification</li>
+              </ul>
+            </div>
+
           </article>
 
           <article class="project-card project-milo active">
@@ -221,8 +243,6 @@
                 <span>Flutter</span>
                 <span>Dart</span>
                 <span>Firebase</span>
-                <span>OCR</span>
-                <span>AI Chatbot</span>
               </div>
 
 
@@ -269,7 +289,7 @@
         <span class="contact-tooltip">Email</span>
       </a>
 
-      <a href="https://linkedin.com" target="_blank" class="contact-link" data-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/darius-john-garcia-8766b8369/" target="_blank" class="contact-link" data-label="LinkedIn">
         <i class="fa-brands fa-linkedin"></i>
         <span class="contact-tooltip">LinkedIn</span>
       </a>
