added another project card rsvp.

--- a/index.html
+++ b/index.html
@@ -265,10 +265,44 @@
 
 
 
-          <article class="project-card">
-            <img src="assets/milo_logo.png" alt="">
-            <h3>Project Title 3</h3>
-            <p>Short description...</p>
+          <article class="project-card project-rsvp">
+
+            <div class="project-image">
+              <img src="assets/rsvp_logo.jpg" alt="RSVP Web Application Logo" />
+
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <a href="#" class="overlay-btn">View Project</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="project-body">
+              <small class="project-hint">Hover to view project details</small>
+
+              <h3>RSVP</h3>
+              <h3>A Wedding Invitation Website</h3>
+
+              <div class="project-tech">
+                <span>TypeScript</span>
+                <span>Vite</span>
+                <span>CSS</span>
+              </div>
+
+              <p class="project-desc">
+                A modern frontend web application built using TypeScript and Vite,
+                designed to manage event invitations and responses through a fast,
+                maintainable, and scalable client-side architecture.
+              </p>
+
+              <ul class="project-features">
+                <li>Type-safe frontend logic using TypeScript</li>
+                <li>Fast development and build pipeline powered by Vite</li>
+                <li>Modular ES module–based browser runtime</li>
+                <li>Environment-based configuration support</li>
+              </ul>
+            </div>
+
           </article>
 
         </div>
