added all car image.

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
               </figure>
 
               <figure class="car-slide">
-                <img src="assets/lead2.jpg" alt="Leadership 2">
-                <figcaption>Project Lead — University Project</figcaption>
+                <img src="assets/thesis.jpg" alt="Leadership 2">
+                <figcaption>Lead Developer — Capstone/ Thesis Group</figcaption>
               </figure>
 
               <figure class="car-slide">
-                <img src="assets/lead3.jpg" alt="Leadership 3">
-                <figcaption>Organization Officer — Tech Club</figcaption>
+                <img src="assets/leader.jpeg" alt="Leadership 3">
+                <figcaption>Leadership Excellence | Highest Honors — DLSU-D</figcaption>
               </figure>
 
             </div>
@@ -188,7 +188,7 @@
 
               <div class="project-overlay">
                 <div class="overlay-content">
-                  <a href="assets/garcia_documentation_senator.pdf" target="_blank" rel="noopener noreferrer" class="overlay-btn">View System</a>
+                  <a href="assets/garcia_documentation_senator.pdf" target="_blank" rel="noopener noreferrer" class="overlay-btn">View Documentation</a>
                 </div>
               </div>
             </div>
