--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         </p>
 
         <p class="about-text">
-          I thrive on solving complex problems and continuously learning new skills to stay
-          ahead in the ever-evolving tech landscape. When I'm not coding, I enjoy
-          collaborating with fellow developers, contributing to open-source projects, and
+          I thrive on continuously learning new skills to stay
+          sustainable in the ever-evolving tech landscape. When I'm not coding, I enjoy
+          diving into personal projects and
           staying updated with the latest industry trends.
         </p>
 
