fixed missing link for 3rd project rsvp.

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
               <div class="project-overlay">
                 <div class="overlay-content">
-                  <a href="#" class="overlay-btn">View Project</a>
+                  <a href="https://rsvp-marielle-gabriel.vercel.app/" class="overlay-btn">View Project</a>
                 </div>
               </div>
             </div>
@@ -298,7 +298,6 @@
               <ul class="project-features">
                 <li>Type-safe frontend logic using TypeScript</li>
                 <li>Fast development and build pipeline powered by Vite</li>
-                <li>Modular ES module–based browser runtime</li>
                 <li>Environment-based configuration support</li>
               </ul>
             </div>
