fix link open to new tab rsvp project.

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
               <div class="project-overlay">
                 <div class="overlay-content">
-                  <a href="https://rsvp-marielle-gabriel.vercel.app/" class="overlay-btn">View Project</a>
+                  <a href="https://rsvp-marielle-gabriel.vercel.app/" class="overlay-btn" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
               </div>
             </div>
