added cloud option.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </p>
 
         <ul class="about-facts">
-          <li><strong>Interested Roles:</strong> Web Developer / Software Engineer</li>
+          <li><strong>Interested Roles:</strong> Web Developer / Software Engineer / Cloud Engineer</li>
           <li><strong>Soft Skills:</strong> Leadership, Communication, Decision Making, Work Ethic</li>
         </ul>
       </div>
@@ -156,6 +156,8 @@
             <div class="tools-item"><img src="https://cdn.simpleicons.org/figma" data-name="Figma"></div>
             <div class="tools-item"><img src="https://cdn.simpleicons.org/git" data-name="Git"></div>
             <div class="tools-item"><img src="https://cdn.simpleicons.org/github" data-name="Github"></div>
+            <div class="tools-item"><img src="https://cdn.simpleicons.org/Docker" data-name="Docker"></div>
+            <div class="tools-item"><img src="https://cdn.simpleicons.org/Kubernetes" data-name="Kubernetes"></div>
             <div class="tools-item"><img src="https://api.iconify.design/logos-android-icon.svg" data-name="Android Studio"></div>
 
 
